--- a/html/home_Page.html
+++ b/html/home_Page.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" type="text/css" href="../css/style_main.css" title="style" />
   <script src="../kings_Of_Coding3.js"></script>
 </head>
-<body>
+<body id="parent">
   <header>
     
     <h1 id="head"><span>🔥≋🌊</span><span>Element Wars</span><span>🌊≋🔥</span> </h1>
   <hr>
   </header>
     <div class="btn">
-    <button class="button" onClick="load()"><p>Normal Mode</p></button>
+    <button class="button" onClick="load('impossible')"><p>Normal Mode</p></button>
     <button class="button" onClick="load()"><p>Player VS Player Mode</p></button>
     <button class="button" onClick="load()"><p>Impossible Mode</p></button>
     </div>
