--- a/html/rules_PlayerVPlayer.html
+++ b/html/rules_PlayerVPlayer.html
@@ -19,5 +19,8 @@
     <input type=button id="button" onClick="location.href='game_PlayerVPlayer.html'"value='Start'>
     <input type=button id="button" onClick="location.href='home_Page.html'"value='Home'>
     </div>
+    <div class="exit">
+      <input type=button id="button" onClick="location.href='exit_Page.html'"value='Exit'>
+    </div>
 </body>
 </html>
