--- a/html/rules_Impossible.html
+++ b/html/rules_Impossible.html
@@ -20,5 +20,8 @@
     <input type=button id="button" onClick="location.href='game_Impossible.html'"value='Start'>
     <input type=button id="button" onClick="location.href='home_Page.html'"value='Home'>
     </div>
+    <div class="exit">
+      <input type=button id="button" onClick="location.href='exit_Page.html'"value='Exit'>
+    </div>
 </body>
 </html>
