--- a/html/game_Normal.html
+++ b/html/game_Normal.html
@@ -7,8 +7,34 @@
   <script src="../kings_Of_Coding3.js"></script>
 </head>
 <body>
-  <header>
+  <div class="results">
+      <div>
+      <h1>You 
+      <span class="player">0</span>
+      </h1>
+      </div>
+      <div>
+        <h1>Computer
+          <span class="computer">0</span>
+        </h1>
+      </div>
+      
     
+     <div class="userpick"><img id="img1" ></div> 
+     <div class="aipick"> <img id="img2"></div>
+     <div class="userpick"><img id="img3"></div> 
+     <div class="aipick"> <img id="img4"></div>
+     <div class="userpick"><img id="img5"></div> 
+     <div class="aipick"> <img id="img6"></div>
+     <div class="userpick"><img id="img7"></div> 
+     <div class="aipick"> <img id="img8"></div>
+     <div class="userpick"><img id="img9"></div> 
+     <div class="aipick"> <img id="img10"></div>
+   
+  </div>
+
+  <header>
+   
     <h1 id="head"><span>🔥≋🌊</span><span>Normal Mode</span><span>🌊≋🔥</span> </h1>
   <hr>
   </header>
@@ -16,6 +42,7 @@
   <a href="fight_Stage.html"><img src="../Source/Fire.png" width="300" height="300" alt="Fire Image" onclick="fire()"></a>
   <a href="fight_Stage.html"><img src="../Source/Wave.png" width="300" height="300" alt="Water Image" onclick="water()"></a>
   <a href="fight_Stage.html"><img src="../Source/Wind.jpg" width="300" height="300" alt="Wind Image" onclick="wind()"></a>
+
   <div class="exit">
     <input type=button id="button" onClick="location.href='exit_Page.html'"value='Exit'>
   </div>
