--- a/html/home_Page.html
+++ b/html/home_Page.html
@@ -13,9 +13,9 @@
   <hr>
   </header>
     <div class="btn">
-    <button class="button" onClick="load()"><p>Normal Mode</p></button>
-    <button class="button" onClick="load()"><p>Player VS Player Mode</p></button>
-    <button class="button" onClick="load()"><p>Impossible Mode</p></button>
+      <input type=button id="button" onClick="location.href='rules_Normal.html'"value='Normal'>
+    <input type=button id="button" onClick="location.href='rules_PlayerVPlayer.html'"value='PlayerVPlayer'>
+    <input type=button id="button" onClick="location.href='rules_Impossible.html'"value='Impossible'>
     </div>
     <div class="exit">
       <input type=button id="button" onClick="location.href='exit_Page.html'"value='Exit'>
