--- a/html/fight_Stage.html
+++ b/html/fight_Stage.html
@@ -6,13 +6,45 @@
   <link rel="stylesheet" type="text/css" href="../css/style_main.css" title="style" />
   <script src="../kings_Of_Coding3.js"></script>
 </head>
-<body>
+<body onload="normal()">
+  <div class="results">
+    <div>
+    <h1>You 
+    <span class="player">0</span>
+    </h1>
+    </div>
+    <div>
+      <h1>Computer
+        <span class="computer">0</span>
+      </h1>
+    </div>
+    
+  
+   <div class="userpick"><img id="img1" ></div> 
+   <div class="aipick"> <img id="img2"></div>
+   <div class="userpick"><img id="img3"></div> 
+   <div class="aipick"> <img id="img4"></div>
+   <div class="userpick"><img id="img5"></div> 
+   <div class="aipick"> <img id="img6"></div>
+   <div class="userpick"><img id="img7"></div> 
+   <div class="aipick"> <img id="img8"></div>
+   <div class="userpick"><img id="img9"></div> 
+   <div class="aipick"> <img id="img10"></div>
+ 
+</div>
+
   <header>
     
     <h1 id="head"><span>🔥≋🌊</span><span>Normal Mode</span><span>🌊≋🔥</span> </h1>
   <hr>
   </header>
-  <div id="myImg"></div>
+  <img id="myImg" width="80" height="90">
+  <h1>VS</h1>
+  <img id="myImg2" width="80" height="90">
+  <h1 id="output"></h1>
+  <div class="btn">
+    <input type=button id="button" onClick="location.href='game_Normal.html'"value='Next'>
+    </div>
   <div class="exit">
     <input type=button id="button" onClick="location.href='exit_Page.html'"value='Exit'>
   </div>
