--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title> Element Wars </title>
-  <link rel="stylesheet" type="text/css" href="../css/style_main.css" title="style" />
-  <script src="../kings_Of_Coding3.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style_main.css" title="style" />
+  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>  
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+  <script src="kings_Of_Coding3.js"></script>
 </head>
 <body>
   <header>
